Using scikit-build, doxygen

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,44 +1,56 @@
-
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.19..3.21)
 
 if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-    project(GooseEYE-test)
+    project(GooseEYE)
     find_package(GooseEYE REQUIRED CONFIG)
+    option(USE_ASSERT "${PROJECT_NAME}: Build with assertions" ON)
+    option(USE_DEBUG "${PROJECT_NAME}: Build in debug mode" OFF)
+    option(USE_SIMD "${PROJECT_NAME}: Build with hardware optimization" OFF)
 endif()
 
-set(ASSERT ON)
-set(DEBUG ON)
-option(SIMD "Enable xsimd" ON)
-option(WARNINGS "Enable warnings" ON)
+set(MYPROJECT "${PROJECT_NAME}-test")
 
-find_package(xtensor REQUIRED)
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+
+if(MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
+endif()
+
 find_package(Catch2 REQUIRED)
+find_package(xtensor REQUIRED)
 
-if(SIMD)
+add_library(mytarget INTERFACE IMPORTED)
+
+target_link_libraries(mytarget INTERFACE
+    ${PROJECT_NAME}
+    ${PROJECT_NAME}::compiler_warnings
+    Catch2::Catch2)
+
+if(USE_ASSERT)
+    target_link_libraries(mytarget INTERFACE ${PROJECT_NAME}::assert)
+    message(STATUS "Compiling ${MYPROJECT} with assertions")
+endif()
+
+if(USE_DEBUG)
+    target_link_libraries(mytarget INTERFACE ${PROJECT_NAME}::debug)
+    message(STATUS "Compiling ${MYPROJECT} in debug mode")
+endif()
+
+if(USE_SIMD)
+    find_package(xtensor REQUIRED)
     find_package(xsimd REQUIRED)
+    target_link_libraries(mytarget INTERFACE xtensor::use_xsimd xtensor::optimize)
+    message(STATUS "Compiling ${MYPROJECT} with hardware optimization")
 endif()
 
-file(GLOB sources "*.cpp")
+file(GLOB APP_SOURCES *.cpp)
 
-add_executable(main ${sources})
-
-target_link_libraries(main PRIVATE
-    Catch2::Catch2
-    GooseEYE
-    xtensor::optimize)
-
-if(SIMD)
-    target_link_libraries(main INTERFACE xtensor::use_xsimd)
-endif()
-
-if(WARNINGS)
-    target_link_libraries(main PRIVATE GooseEYE::compiler_warnings)
-endif()
-
-if(ASSERT)
-    target_link_libraries(main PRIVATE GooseEYE::assert)
-endif()
-
-if(DEBUG)
-    target_link_libraries(main PRIVATE GooseEYE::debug)
-endif()
+foreach(mysource ${APP_SOURCES})
+    string(REPLACE ".cpp" "" myexec ${mysource})
+    get_filename_component(myexec ${myexec} NAME)
+    add_executable(${myexec} ${mysource})
+    target_link_libraries(${myexec} PRIVATE mytarget)
+    add_test(NAME ${myexec} COMMAND ${myexec})
+endforeach()
