--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   push:
     branches:
-      - master
+    - master
 
 jobs:
 
@@ -16,24 +16,24 @@ jobs:
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         include:
-          - runs-on: ubuntu-latest
-            config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1
-            conda: environment.yaml
-            prop: tests & examples
-          - runs-on: macos-latest
-            config: -DCMAKE_BUILD_TYPE=Release -DBUILD_ALL=1
-            conda: environment.yaml
-            prop: tests
-          - runs-on: windows-latest
-            config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-            conda: environment.yaml
-            prop: tests
+        - runs-on: ubuntu-latest
+          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1
+          conda: environment.yaml
+          prop: tests & examples
+        - runs-on: macos-latest
+          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_ALL=1
+          conda: environment.yaml
+          prop: tests
+        - runs-on: windows-latest
+          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+          conda: environment.yaml
+          prop: tests
 
     defaults:
       run:
         shell: bash -l {0}
 
-    name: "${{ matrix.runs-on }} • x64 ${{ matrix.args }}"
+    name: ${{ matrix.runs-on }} • x64 ${{ matrix.args }}
     runs-on: ${{ matrix.runs-on }}
 
     steps:
