--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,21 @@
 repos:
 - repo: https://github.com/psf/black
-  rev: 21.12b0
+  rev: 22.3.0
   hooks:
   - id: black
     args: [--safe, --quiet, --line-length=100]
+    exclude: ^docs/doxystyle
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.0.1
+  rev: v4.2.0
   hooks:
   - id: trailing-whitespace
+    exclude: ^docs/doxystyle
   - id: end-of-file-fixer
+    exclude: ^docs/doxystyle
   - id: check-yaml
   - id: debug-statements
 - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-  rev: v2.2.0
+  rev: v2.3.0
   hooks:
   - id: pretty-format-yaml
     args: [--autofix, --indent, '2']
@@ -20,13 +23,13 @@ repos:
   rev: v1.1
   hooks:
   - id: autoflake
-    args: [--in-place, --remove-all-unused-imports, --remove-unused-variable]
+    args: [--in-place, --remove-unused-variable, --remove-all-unused-imports]
 - repo: https://github.com/asottile/reorder_python_imports
-  rev: v2.6.0
+  rev: v3.0.1
   hooks:
   - id: reorder-python-imports
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.29.1
+  rev: v2.32.0
   hooks:
   - id: pyupgrade
     args: [--py36-plus]
@@ -36,11 +39,12 @@ repos:
   - id: flake8
     args: [--max-line-length=100]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v1.20.0
+  rev: v1.20.1
   hooks:
   - id: setup-cfg-fmt
 - repo: https://github.com/pocc/pre-commit-hooks
-  rev: v1.3.4
+  rev: v1.3.5
   hooks:
   - id: clang-format
     args: [-i]
+    exclude: ^docs/doxystyle
