Fixing minor typos

--- a/GooseEYE.pc.in
+++ b/GooseEYE.pc.in
@@ -3,5 +3,5 @@ includedir=${prefix}/include
 
 Name: @PROJECT_NAME@
 Description: Geometric statistics in C++.
-Version: @GOOSEEYE_VERSION@
+Version: @PROJECT_VERSION@
 Cflags: -I${includedir}
