--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,7 +37,7 @@ repos:
   rev: 4.0.1
   hooks:
   - id: flake8
-    args: [--max-line-length=100]
+    args: [--max-line-length=100, --ignore=E203]
 - repo: https://github.com/asottile/setup-cfg-fmt
   rev: v1.20.1
   hooks:
