--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,7 +4,7 @@ on:
 
   push:
     branches:
-    - master
+    - main
 
   release:
     types: [released]
@@ -26,10 +26,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set conda environment (using micromamba for speed)
+    - name: Set conda environment
       uses: mamba-org/provision-with-micromamba@main
       with:
-        environment-file: .ci_environment_docs.yaml
+        environment-file: environment.yaml
         environment-name: myenv
 
     - name: Configure using CMake
@@ -37,7 +37,7 @@ jobs:
 
     - name: Build the docs
       working-directory: build
-      run: make docs
+      run: make html
 
     - name: Deploy to GitHub Pages
       if: success()
