--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,35 +1,35 @@
 repos:
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.5.0
+  hooks:
+  - id: trailing-whitespace
+  - id: end-of-file-fixer
+  - id: check-yaml
+  - id: check-toml
+  - id: debug-statements
+- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+  rev: v2.11.0
+  hooks:
+  - id: pretty-format-yaml
+    args: [--preserve-quotes, --autofix, --indent, '2']
+  - id: pretty-format-toml
+    args: [--autofix]
 - repo: https://github.com/psf/black
-  rev: 23.7.0
+  rev: 23.11.0
   hooks:
   - id: black
     args: [--safe, --quiet, --line-length=100]
-    exclude: ^docs/doxystyle
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
-  hooks:
-  - id: trailing-whitespace
-    exclude: ^docs/doxystyle
-  - id: end-of-file-fixer
-    exclude: ^docs/doxystyle
-  - id: check-yaml
-  - id: debug-statements
-- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-  rev: v2.10.0
-  hooks:
-  - id: pretty-format-yaml
-    args: [--autofix, --indent, '2']
 - repo: https://github.com/humitos/mirrors-autoflake.git
   rev: v1.1
   hooks:
   - id: autoflake
     args: [--in-place, --remove-unused-variable, --remove-all-unused-imports]
 - repo: https://github.com/asottile/reorder_python_imports
-  rev: v3.10.0
+  rev: v3.12.0
   hooks:
   - id: reorder-python-imports
 - repo: https://github.com/asottile/pyupgrade
-  rev: v3.10.1
+  rev: v3.15.0
   hooks:
   - id: pyupgrade
     args: [--py36-plus]
@@ -37,14 +37,22 @@ repos:
   rev: 6.1.0
   hooks:
   - id: flake8
-    args: [--max-line-length=100, --ignore=E203]
+    args: [--max-line-length=100, "--ignore=E203", "--per-file-ignores=__init__.py:F405"]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v2.4.0
+  rev: v2.5.0
   hooks:
   - id: setup-cfg-fmt
-- repo: https://github.com/pocc/pre-commit-hooks
-  rev: v1.3.5
+- repo: https://github.com/tdegeus/cpp_comment_format
+  rev: v0.2.0
+  hooks:
+  - id: cpp_comment_format
+- repo: https://github.com/pre-commit/mirrors-clang-format
+  rev: v17.0.4
   hooks:
   - id: clang-format
     args: [-i]
-    exclude: ^docs/doxystyle
+- repo: https://github.com/tdegeus/conda_envfile
+  rev: v0.4.2
+  hooks:
+  - id: conda_envfile_parse
+    files: environment.yaml
