--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         include:
         - runs-on: ubuntu-latest
-          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1
-        - runs-on: macos-latest
           config: -DCMAKE_BUILD_TYPE=Release -DBUILD_ALL=1
+        - runs-on: macos-latest
+          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1
         - runs-on: windows-latest
           config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
 
@@ -52,25 +52,14 @@ jobs:
         LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
         echo "SETUPTOOLS_SCM_PRETEND_VERSION=$LATEST_TAG" >> $GITHUB_ENV
 
-    - name: Configure using CMake
-      run: cmake -Bbuild ${{ matrix.config }}
-
-    - name: Build C++
-      working-directory: build
-      run: cmake --build .
-
-    - name: Run C++
-      working-directory: build
-      run: ctest --output-on-failure
-
     - name: Build and install Python module
       run: python -m pip install . -v --no-build-isolation
 
     - name: Run Python tests
       run: pytest
 
-    - name: Run Python tests
-      if: runner.os == 'macOS'
+    - name: Run Python examples
+      if: runner.os == 'linux'
       working-directory: docs/examples
       run: |
         python S2.py --check
@@ -90,7 +79,18 @@ jobs:
         python pixel_path.py --check
         python structure.py --check
 
-    - name: Build doxygen-docs (error on warning)
-      if: runner.os == 'macOS'
+    - name: Configure using CMake
+      run: cmake -Bbuild ${{ matrix.config }}
+
+    - name: Build C++
       working-directory: build
-      run: make docs
+      run: cmake --build .
+
+    - name: Run C++ tests
+      working-directory: build
+      run: ctest --output-on-failure
+
+    - name: Build doxygen-docs (error on warning)
+      if: runner.os == 'linux'
+      working-directory: build
+      run: make html
