--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,9 @@ jobs:
         LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
         echo "SETUPTOOLS_SCM_PRETEND_VERSION=$LATEST_TAG" >> $GITHUB_ENV
 
+    - name: Get pybind11_mkdoc
+      run: python -m pip install git+git://github.com/pybind/pybind11_mkdoc.git@master
+
     - name: Build and install Python module
       run: python -m pip install . -v --no-build-isolation
 
