Automatically formatting CMake

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,6 +51,11 @@ repos:
   hooks:
   - id: clang-format
     args: [-i]
+- repo: https://github.com/cheshirekow/cmake-format-precommit
+  rev: v0.6.10
+  hooks:
+  - id: cmake-format
+  - id: cmake-lint
 - repo: https://github.com/tdegeus/conda_envfile
   rev: v0.4.2
   hooks:
